--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -15,6 +15,12 @@ env:
   PG_USER: ${{ vars.POSTGRES_USER }}
   PG_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
   POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+  EMAIL_BACKEND: ""
+  EMAIL_HOST: ""
+  EMAIL_PORT: ""
+  EMAIL_USE_TLS: ""
+  EMAIL_HOST_USER: ""
+  EMAIL_HOST_PASSWORD: ""
   
 jobs:
   build:
