--- a/.github/workflows/db_deploy.yaml
+++ b/.github/workflows/db_deploy.yaml
@@ -7,8 +7,8 @@ env:
     POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
     DATABASE: ${{ vars.POSTGRES_DB }}
 
-    PGADMIN_DEFAULT_EMAIL: ${{ vars.DEV_PGADMIN_DEFAULT_EMAIL }}
-    PGADMIN_DEFAULT_PASSWORD: ${{ secrets.DEV_PGADMIN_DEFAULT_PASSWORD }}
+    PGADMIN_DEFAULT_EMAIL: ${{ vars.PGADMIN_DEFAULT_EMAIL }}
+    PGADMIN_DEFAULT_PASSWORD: ${{ secrets.PGADMIN_DEFAULT_PASSWORD }}
 
 jobs:
   deploy:
