--- a/.github/workflows/db_deploy.yaml
+++ b/.github/workflows/db_deploy.yaml
@@ -15,6 +15,8 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: PreReclaim cache directory
+        run: chown -R 1000:1000 $HOME/actions-runner/_work/Forum/Forum/configs/postgres
       - name: Checkout
         uses: actions/checkout@v3
       - name: Reclaim cache directory
