--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   db:
     image: postgres:14
+    user: softforum
     container_name: db
     restart: always
     volumes:
