--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   db:
     image: postgres:14
-    user: softforum
+    user: 1000:1000
     container_name: db
     restart: always
     volumes:
