--- a/.github/workflows/django_cd_dev.yml
+++ b/.github/workflows/django_cd_dev.yml
@@ -5,12 +5,18 @@ env:
     DEBUG: ${{ vars.DEV_DEBUG }}
     SECRET_KEY: ${{ secrets.DEV_SECRET_KEY }}
     ENGINE: ${{ vars.ENGINE }}
-    HOST: ${{ vars.POSTGRES_HOST }}
-    PORT: ${{ vars.POSTGRES_PORT }}
-    DB: ${{ vars.DEV_DB }}
-    USER: ${{ vars.POSTGRES_USER }}
-    PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-    DATABASE: ${{ vars.POSTGRES_DB }}
+    DB_HOST: ${{ vars.POSTGRES_HOST }}
+    DB_PORT: ${{ vars.POSTGRES_PORT }}
+    PG_DB: ${{ vars.DEV_DB }}
+    PG_USER: ${{ vars.POSTGRES_USER }}
+    PG_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+    POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+    EMAIL_BACKEND: "django.core.mail.backends.smtp.EmailBackend"
+    EMAIL_HOST: ""
+    EMAIL_PORT: ""
+    EMAIL_USE_TLS: ""
+    EMAIL_HOST_USER: ""
+    EMAIL_HOST_PASSWORD: ""
 
 jobs:
   deploy:
