--- a/.github/workflows/django_cd_prod.yml
+++ b/.github/workflows/django_cd_prod.yml
@@ -19,12 +19,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Docker compouse DOWN old containers
-        run:  docker compose -f docker-compose.prod.yml down -v
-      - name: Docker compouse UP new containers
-        run: docker compose -f docker-compose.prod.yml up -d --build
+
+      - name: Docker compouse DOWN old Django container
+        run:  docker compose -f docker-compose.dev.yml down -v
+      - name: Docker compouse UP Django container
+        run: docker compose -f docker-compose.dev.yml up -d --build
       - name: Docker compouse MIGRATE models
-        run: docker compose -f docker-compose.prod.yml exec web-prod python manage.py migrate --noinput
+        run: docker compose -f docker-compose.dev.yml exec web-dev python manage.py migrate --noinput
+      
+      - name: Docker compouse DOWN old Fronend container
+        run:  docker compose -f FrontEnd/docker-compose.yml down -v
+      - name: Docker compouse UP Fronend container
+        run: docker compose -f FrontEnd/docker-compose.yml up -d --build
+      
       - name: Clean up old docker resources 
         run: |
           docker container prune -f
