--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -27,3 +27,6 @@ services:
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}"
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}"
 
+networks:
+  frontend_default:
+    external: true
