--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,7 +26,7 @@ services:
       - EMAIL_USE_TLS=${EMAIL_USE_TLS}"
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}"
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}"
-
+    networks:
+      - forum_network
 networks:
-  frontend_default:
-    external: true
+  forum_network:
