--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,4 +20,7 @@ services:
       - USER=${USER}
       - PASSWORD=${PASSWORD}
       - DATABASE=${DATABASE}
-
+    networks:
+      - forum_network
+networks:
+  forum_network:
