--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,5 +28,16 @@ services:
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}"
     networks:
       - forum_network
+  frontend:
+    container_name: frontend
+    image: frontend
+    ports:
+      - 3000:3000
+    build:
+      context: ./FrontEnd
+      target: production
+    networks:
+      - forum_network
+
 networks:
   forum_network:
