--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -9,8 +9,8 @@ services:
       - ./configs/postgres:/docker-entrypoint-initdb.d
       -  db_data:/var/lib/postgresql/data
 
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432
     networks:
       - forum_network
     environment:
@@ -20,9 +20,10 @@ services:
   
   pgadmin:
     image: dpage/pgadmin4
+    container_name: pgadmin
     restart: always
-    ports:
-      - 5050:80
+    # ports:
+    #   - 5050:80
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
