--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,8 +8,8 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./:/Forum
-    ports:
-      - 8000:8000
+    # ports:
+    #   - 8000:8000
     environment:
       - DEBUG=${DEBUG}
       - SECRET_KEY=${SECRET_KEY}
@@ -31,8 +31,8 @@ services:
   frontend:
     container_name: frontend
     image: frontend
-    ports:
-      - 3000:3000
+    # ports:
+    #   - 3000:3000
     build:
       context: ./FrontEnd
       target: production
