--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -1,24 +1,24 @@
 server {
     listen 80;
-    server_name 178.212.110.52;
+    server_name http://178.212.110.52;
 
     # React
     location / {
-        proxy_pass http://localhost:80;
+        proxy_pass http://frontend:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     # Django Admin
     location /admin/ {
-        proxy_pass http://localhost:8000;
+        proxy_pass http://web-dev:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     # PGAdmin
     location /pgadmin/ {
-        proxy_pass http://localhost:5050;
+        proxy_pass http://pgadmin:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
