--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -4,22 +4,26 @@ server {
 
     # React
     location / {
-        proxy_pass http://frontend:80;
+        proxy_pass http://frontend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     # Django Admin
-    location /admin/ {
-        proxy_pass http://web-dev:8000;
+    location /admin {
+        proxy_pass http://web-dev:8000/admin/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     # PGAdmin
-    location /pgadmin/ {
-        proxy_pass http://pgadmin:80;
+    location /pgadmin {
+        proxy_pass http://pgadmin/;
+        proxy_http_version 1.1;
+        proxy_set_header X-Script-Name /pgadmin;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
     }
 }
