--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -1,50 +1,32 @@
 server {
     listen 80;
-    server_name _;
-    server_tokens off;
-    client_max_body_size 20M;
+    server_name http://178.212.110.52;
 
     # React
     location / {
-        try_files $uri @proxy_react;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
     # Django API
     location /api/ {
-        try_files $uri @proxy_django;
+        proxy_pass http://web-dev:8000/api/;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
     # Django Admin
-    location /admin {
-        try_files $uri @proxy_django;
+    location /admin/ {
+        proxy_pass http://web-dev:8000/admin/;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
     # PGAdmin
     location /pgadmin {
-        try_files $uri @proxy_pgadmin;
-    }
-
-
-
-    location @proxy_django {
-        proxy_pass   http://web-dev:8000;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Url-Scheme $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-    }
-
-    location @proxy_react {
-        proxy_pass http://frontend;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    location @proxy_pgadmin {
         proxy_pass http://pgadmin/;
         proxy_http_version 1.1;
         proxy_set_header X-Script-Name /pgadmin;
@@ -52,8 +34,5 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-
     }
-
-
 }
