--- a/FrontEnd/nginx.conf
+++ b/FrontEnd/nginx.conf
@@ -1,9 +1,35 @@
 server {
-  listen 3000;
+  listen 80;
 
   location / {
     root /usr/share/nginx/html/;
     include /etc/nginx/mime.types;
     try_files $uri $uri/ /index.html;
+  }
+
+  location /api/ {
+    proxy_pass http://web-dev:8000/api/;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+  }
+
+  # Django Admin
+  location /admin/ {
+    proxy_pass http://web-dev:8000/admin/;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+  }
+
+  # PGAdmin
+  location /pgadmin {
+    proxy_pass http://pgadmin/;
+    proxy_http_version 1.1;
+    proxy_set_header X-Script-Name /pgadmin;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 }
